# multi-agent-product-public

./: .gitignore  ASSEMBLY.md  CLASSIFICATION.md  FOLDER_TREE.txt  LICENSE  NOTICE  PUSH_NOW.md  PUSH_TO_GITHUB.md  PUSH_UPDATES.md  README.md  SECURITY.md  SUMMARY.md  UPDATES.md  VALIDATION_REPORT.md  prepublish.sh  push-updates.sh
contracts/: openapi.yaml
docs/: architecture.md  flow.md  observability.md  security.md
samples/sample_requests/: cart_operation.json  feedback_negative.json  feedback_positive.json  multi_step_query.json  product_query.json
samples/sample_responses/: cart_operation.json  feedback_response.json  multi_step_query.json  product_query.json
src_public/: README.md  app.py  pyproject.toml
src_public/api/: __init__.py  mock_service.py  models.py
