[project]
name = "ai-assistant-ecosystem-mock"
version = "1.0.0-mock"
description = "Mock-mode implementation of Multi-Agent Product Intelligence Platform API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    "pydantic>=2.11.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

